# ib-practica12-oop-gtests-exercism-Marcant97

complejo/: CMakeLists.txt
complejo/src/: complejo.cc  complejo.h  complejo_main.cc
complejo/tests/: gtests_main.cc  test_complejo.cc
fecha/: CMakeLists.txt
fecha/src/: fecha.cc  fecha.h  fecha1.cc  fecha_main.cc  fich7.txt  prueba.cc  prueba.txt
fecha/tests/: gtests_main.cc  test_fecha.cc
modificacion/: complejo.cc  complejo.h  complejo_main.cc
